:bug: Adicionando token csrf em req htmx

--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -16,5 +16,10 @@
     <script src="{% static 'js/htmx.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
+    <script>
+        document.body.addEventListener('htmx:configRequest', (event) => {
+            event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+        });
+    </script>
 </body>
 </html>
